# pszcz-flow-simulator

./: .gitignore  DIRECTIONS_FOR_CODEX.md  Dockerfile  LICENSE  PROTOCOL.md  README.md  README_T1.md  docker-compose.yml  install_pszcz.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Objekty/: README.md  jizva-ticha.txt
Objekty/concepts/: ladici.txt
Objekty/places/: jezero-odrazu.txt  ticha-vlna.txt  udoli-linych-vetru.txt
Objekty/postavy/: eamon-z-brehu.txt  joric-kartograf.txt  kaelen-z-udoli.txt  lyra-z-tichych-vrchu.txt  orin-stopar.txt  rhea-seda-svedkyne.txt  vorin-ze-silencie.txt
Příběhy/: README.md
Příběhy/jizva-ticha/1/: 13.txt  14.txt  15.txt
client/: __init__.py  net.py  state.py
client/t0/: __init__.py  __main__.py  net.py  state.py  ui.py
client/t1/: __init__.py  adapter.py  emoji_client.py  model.py  serialize.py  view.py
levels/: level.sample.v1.json  level.smoke.pump_to_drain.v1.json
server/: __init__.py  io.py  net.py  state.py  tick.py
tests/: test_client_commands.py  test_client_net.py  test_client_t0_net.py  test_edit_batch.py  test_grid.py  test_health.py  test_save.py  test_server.py  test_server_client_handshake.py  test_server_io.py  test_state.py  test_t1_adapters.py  test_t1_render.py  test_t1_serialize.py  test_view.py  test_websockets.py  test_ws_roundtrip.py
